# arctic-oauth

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/rfcs/: RFC-001-arctic-oauth.md  RFC-002-provider-specific-api.md  RFC-003-remaining-providers.md  RFC-004-http-client-refactor.md
src/: client.rs  error.rs  http.rs  lib.rs  oidc.rs  pkce.rs  provider.rs  request.rs  state.rs  tokens.rs
src/providers/: amazon_cognito.rs  anilist.rs  apple.rs  atlassian.rs  auth0.rs  authentik.rs  autodesk.rs  battle_net.rs  bitbucket.rs  box_oauth.rs  bungie.rs  coinbase.rs  discord.rs  donation_alerts.rs  dribbble.rs  dropbox.rs  epic_games.rs  etsy.rs  facebook.rs  figma.rs  forty_two.rs  gitea.rs  github.rs  gitlab.rs  google.rs  intuit.rs  kakao.rs  keycloak.rs  kick.rs  lichess.rs  line.rs  linear.rs  linkedin.rs  mastodon.rs  mercado_libre.rs  mercado_pago.rs  microsoft_entra_id.rs  mod.rs  my_anime_list.rs  naver.rs  (+25 more)
tests/: discord_test.rs  github_test.rs  google_test.rs  oauth2_flow_test.rs
tests/common/: mock_http_client.rs  mock_server.rs  mod.rs
