[package]
name = "arctic-oauth"
version = "0.1.0"
edition = "2024"

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest"]
google = []
github = []
discord = []
all-providers = ["google", "github", "discord", "testing"]
testing = []

[dependencies]
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
